# microkit

./: .flake8  .gitignore  .gitmodules  .linkcheck-ignore.yml  CHANGES.md  CMakeLists.txt  Cargo.toml  DEVELOPER.md  LICENSE  LICENSE.md  README.md  RELEASING.md  build_sdk.py  capdl_pip.txt  capdl_requirements.txt  dev_build.py  domain_schedule.c  flake.nix  install_capdl.sh  macos_sign.sh  mypy.ini  platforms.yml  release.sh  requirements.txt  rust_toolchain.toml  system.xsd  validate.sh
.cargo/: config.toml
.github/workflows/: _sdk.yaml  build_sdk.yml  ci.yaml  deploy.yml  pr.yml  push.yml  sdk.yaml
.reuse/: dep5
LICENSES/: LicenseRef-Trademark.txt
ci/: build.sh  dev_version.sh  install_march_build_deps.sh  install_ubuntu_deps.sh  local_run.sh  sdk_version.sh  test.py
custom_dts/: iot-gate.dts  overlay-zynqmp-kria-k26.dts
docs/: README.md  manual.md
docs/style/: sel4.sty
example/ariane/hello/: Makefile  hello.c
example/arm_smc/: Makefile  README.md  arm_smc.c  arm_smc.system
example/bootinfo/: Makefile  README.md  bootinfo.c  bootinfo.system
example/cap_sharing/: Makefile  README.md  cap_sharing.c  cap_sharing.system  secondary.c
example/cheshire/hello/: hello.system
example/core/: Makefile  core.h  core.system  pd1.c  pd2.c  uart.h
example/domains/: Makefile  README.md  collector.c  domains.system  emitter.c
example/ethernet/: Makefile  README.md  eth.c  ethernet.system  gpt.c
example/handoff_untypeds/: Makefile  README.md  handoff_untypeds.system  hello.c
example/hello/: Makefile  README.md  hello.c  hello.system
example/hello_domains/: Makefile  README.md  hello.c  hello.system
example/hierarchy/: Makefile  README.md  hello.c  hierarchy.system  restarter.c
example/hifive_unleashed/hello/: Makefile
example/imx8mm/passive_server/: Makefile  client.c  passive_server.system  server.c
example/imx8mm_evk/passive_server/: Makefile  passive_server.system  server.c
example/iommu/: build.sh
example/mr_prefill/: Makefile  README.md  mr_prefill.c  mr_prefill.system
example/passive_server/: Makefile  README.md  client.c  server.c
example/rust/: Cargo.toml  Makefile  README.md  hello.rs  rust-toolchain.toml  rust.system
example/rust/support/targets/: riscv64gc-sel4-microkit-minimal.json
example/setvar/: Makefile  README.md  setvar.c  setvar.system
example/timer/: Makefile  README.md  timer.system
example/x86_64_iommu_dma_test/: Makefile  README.md  x86_64_iommu_dma_test.c  x86_64_iommu_dma_test.system
example/x86_64_ioport/: Makefile  README.md  x86_64_ioport.c  x86_64_ioport.system
example/x86_64_nehalem/: sim
initialiser/: Cargo.toml
libmicrokit/: Makefile  microkit.ld
libmicrokit/include/: microkit.h
libmicrokit/src/: dbg.c  main.c
libsel4cp/: Makefile
libsel4cp/include/: sel4cp.h
libsel4cp/src/: dbg.c  main.c
loader/: Makefile  aarch64.ld  loader.ld  riscv64.ld
loader/src/: arch.h  cpus.h  cutil.c  cutil.h  loader.c  loader.h  uart.c  uart.h  util64.S
monitor/: Makefile  monitor.ld
monitor/src/: crt0.s  debug.c  debug.h  main.c  util.c  util.h
tests/capfault/: Makefile  README.md  capfault.c  capfault.system
tests/hello/: Makefile  restarter.c
tests/overlapping_pages/: Makefile  README.md  overlapping_pages.c  overlapping_pages.system
tests/simplemrs/: Makefile  README.md  simplemrs.c  simplemrs.system
tool/: pyoxidizer.bzl
tool/microkit/: Cargo.toml  __main__.py  address_space_constants.h  docs.md  elf.py  loader.py  object_sizes.h  rust-toolchain.toml  sel4.py  sysxml.py  util.py
tool/microkit/.cargo/: config.toml
tool/microkit/initialiser/: Cargo.toml
tool/microkit/initialiser/src/: main.rs
tool/microkit/src/: argparse.rs  build.rs  crc32.rs  elf.rs  jsonparse.rs  lib.rs  linux.rs  loader.rs  main.rs  report.rs  sdf.rs  sdk.rs  sdkparse.rs  sel4.rs  symbols.rs  sysxml.rs  uimage.rs  util.rs  viper.rs  x86loader.rs
tool/microkit/src/capdl/: allocation.rs  builder.rs  initialiser.rs  iomem.rs  irq.rs  memory.rs  mod.rs  packaging.rs  reserialise_spec.rs  spec.rs  util.rs
tool/microkit/tests/: test.rs
tool/microkit/tests/sdf/: cap_mappings_slot_invalid.system  ch_bidirectional_ppc.system  ch_end_invalid_notify.xml  ch_end_invalid_pp.system  ch_id_not_a_number.system  ch_invalid_attrs.system  ch_invalid_element.xml  ch_invalid_pd.xml  ch_not_enough_ends.system  ch_ppcall_priority.system  ch_too_many_ends.xml  domain_assign_pd_to_invalid_domain.system  domain_duplicate_index_shift.system  domain_duplicate_start_index.system  domain_exceed_max_domains.system  domain_invalid_shift.system  domain_invalid_start_index.system  domain_invalid_timeslice.system  domain_no_pd_domain.system  domain_no_schedule.system  domain_out_of_bounds_shift.system  domain_out_of_bounds_start_index.system  domain_smp.system  iommu_address_overflow.system  iommu_duplicate_device.system  iommu_duplicate_device_identifier.system  iommu_duplicate_domain_identifier.system  iommu_missing_from_config.system  iommu_out_of_bound.system  iommu_overlap_different_devices.system  iommu_overlap_mixed_page_sizes.system  iommu_overlap_same_device.system  iommu_pci_invalid.system  iommu_pci_negative_bus.system  iommu_pci_negative_device.system  iommu_pci_negative_function.system  iommu_perms_execute_invalid.system  iommu_perms_read_write.system  iommu_perms_write_only.system  iommu_range_out_of_bound.system  (+94 more)
tool/sel4coreplat/: __main__.py  capdl  cdlutil.py  elf.py  loader.py  sel4.py  sysxml.py  util.py
tool/test/: __init__.py  ch_id_greater_than_62.xml  ch_id_greater_than_63.xml  ch_id_less_than_0.xml  ch_missing_id.xml  ch_missing_pd.xml  irq_invalid_trigger.xml  mr_addr_not_aligned_to_page_size.xml  mr_missing_name.xml  mr_size_not_multiple_of_page_size.xml  pd_cpu_greater_than_max.xml  pd_cpu_less_than_0.xml  pd_duplicate_program_image.xml  pd_missing_mr.xml  pd_missing_name.xml  pd_missing_path.xml  sys_channel_duplicate_b_id.xml  sys_duplicate_irq_id.xml  sys_duplicate_irq_number.xml  sys_duplicate_mr_name.xml  sys_map_invalid_mr.xml  sys_map_not_aligned.xml  sys_text_elements.xml  vm_duplicate_name.xml
(+81 files in other folders)
