#
# Copyright 2025, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]
resolver = "3"
members = [
    "tool/microkit",
    "initialiser",
]

[workspace.dependencies.sel4-capdl-initializer]
git = "https://github.com/seL4/rust-sel4"
rev = "c30d0e44fb32c15239049ce402ef2a8c72499aa3"

[workspace.dependencies.sel4-capdl-initializer-types]
git = "https://github.com/seL4/rust-sel4"
rev = "c30d0e44fb32c15239049ce402ef2a8c72499aa3"

[profile.release.package.microkit-tool]
strip = true
