#
# Copyright 2025, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]
resolver = "3"
members = [
    "tool/microkit",
    "initialiser",
]

[workspace.dependencies.sel4-capdl-initializer]
git = "https://github.com/seL4/rust-sel4"
rev = "21cca71072cda60bd8cc3f1b585818a21e0c6a77"

[workspace.dependencies.sel4-capdl-initializer-types]
git = "https://github.com/seL4/rust-sel4"
rev = "21cca71072cda60bd8cc3f1b585818a21e0c6a77"

[profile.release.package.microkit-tool]
strip = true
