#
# Copyright 2025, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#
#
[package]
name = "hello"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

[[bin]]
name = "hello"
path = "hello.rs"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", rev = "3059c2d236bf56b066936dd48d8966255e172c3b" }
