#
# Copyright 2024, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "microkit-tool"
version = "2.1.0-dev"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "microkit"
path = "src/main.rs"

[dependencies]
roxmltree = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.117"
rkyv = { version = "0.8.12", default-features = false, features = ["alloc", "bytecheck", "pointer_width_32"] }
sel4-capdl-initializer-types = { workspace = true, features = ["serde", "deflate", "transform"] }
